[gd_scene load_steps=2 format=3 uid="uid://c8lbk4ffapuwq"]

[ext_resource type="Script" uid="uid://cy0k50m1g3y3v" path="res://scenes/ui/start_menu.gd" id="1_irhji"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irhji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
